samples/_failures_safe/1761482009_b1bfdd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1639e3a2.c: In function ‘main’:
./samples/SAFE/__tmp_1639e3a2.c:145:12: error: expected identifier or ‘(’ at end of input
  145 |     struct Matrix
      |            ^~~~~~
./samples/SAFE/__tmp_1639e3a2.c:145:12: error: expected declaration or statement at end of input
